<resources>
    <string name="app_name">Bad Apple!! Live Wallpaper</string>
    <string name="description">[Touhou] Bad Apple! PV [Kagee] as a live wallpaper for Android.</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="aspect_title">Screen size</string>
    <string name="aspect_summary">Set the screen size.</string>
    <string name="direction_title">Orientation</string>
    <string name="direction_sumary">Set the orientation.</string>
    <string name="fps_title">FPS</string>
    <string name="fps_summary">Set the number of frames per second as an integer value (trial function). You can set up to 30, but the performance may not be that great.</string>

    <string name="main_error_message">The transition to the live wallpaper setting screen failed. Please try setting the live wallpaper from the device settings application.</string>
    <string name="shortcut_open_settings_short">Open settings</string>
    <string name="shortcut_open_settings_long">Directly opens the parameter setting screen</string>
</resources>
